Se agregan archivos SASS y actualizaciones de HTML

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be You Cosméticos</title>
+    <meta name="description" content="Explora nuestra línea de productos capilares en Be You Cosméticos. Tintes y agua oxigenada para realzar tu belleza.">
+    <meta name="keywords" content="tintes, productos capilares, Be You, cosméticos">
+    <title>Productos - Be You Cosméticos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <!-- Encabezado -->
     <header class="bg-light text-center py-3">
         <h1>Comercializadora Be You Cosméticos</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,11 +19,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
                 </ul>
             </div>
         </nav>
@@ -35,15 +36,23 @@
         <section class="mb-5">
             <h3>Tintes para el cabello</h3>
             <div class="row">
-                <div class="col-md-6 text-center">
-                    <img src="images/tintes-productos.png" alt="Exitenn" class="img-fluid">
-                    <h5>Exitenn</h5>
-                    <p>Amplia variedad de colores</p>
+                <div class="col-md-6 text-center mb-4">
+                    <div class="card">
+                        <img src="images/tintes-productos.png" alt="Exitenn" class="card-img-top img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Exitenn</h5>
+                            <p class="card-text">Amplia variedad de colores</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 text-center">
-                    <img src="images/agua-oxi-productos.png" alt="Agua Oxigenada" class="img-fluid">
-                    <h5>Agua Oxigenada</h5>
-                    <p>Distintos volúmenes</p>
+                <div class="col-md-6 text-center mb-4">
+                    <div class="card">
+                        <img src="images/agua-oxi-productos.png" alt="Agua Oxigenada" class="card-img-top img-fluid">
+                        <div class="card-body">
+                            <h5 class="card-title">Agua Oxigenada</h5>
+                            <p class="card-text">Distintos volúmenes</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
