--- a/pages/acerca-de.html
+++ b/pages/acerca-de.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be You Cosméticos</title>
+    <title>Acerca de - Be You Cosméticos</title>
+    <meta name="description" content="Descubre la misión y visión de Be You Cosméticos, una distribuidora de tintes que celebra la belleza única de cada persona.">
+    <meta name="keywords" content="tintes, cosméticos, belleza, distribuidora, Be You">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <!-- Encabezado -->
     <header class="bg-light text-center py-3">
         <h1>Comercializadora Be You Cosméticos</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,18 +19,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
                 </ul>
             </div>
         </nav>
     </header>
     
     <main id="main" class="container mt-5">
-        <section id="inicio">
+        <section id="mision">
             <h2>Nuestra Misión</h2>
             <p>Inspirar y empoderar a cada persona a descubrir y expresar su belleza única a través de productos capilares de alta calidad. Be You busca ser una marca inclusiva y accesible que celebre la autenticidad y apoye la autoexpresión sin límites.</p>
         </section>
@@ -66,8 +67,6 @@
             </section>
         </div>
     </footer>
-
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
