--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be You Cosméticos</title>
+    <title>Contacta a Be You Cosméticos</title>
+    <meta name="description" content="Contáctanos para conocer más sobre nuestros servicios de distribución de tintes.">
+    <meta name="keywords" content="tintes, cosméticos, contacto, Be You">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
-    <!-- Encabezado -->
     <header class="bg-light text-center py-3">
         <h1>Comercializadora Be You Cosméticos</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,11 +19,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
                 </ul>
             </div>
         </nav>
@@ -30,18 +31,18 @@
 
     <main id="main" class="container mt-4">
         <h2>Contáctanos</h2>
-        <form class="mb-5">
+        <form class="mb-5" action="enviar_mensaje.php" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingresa tu nombre">
+                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
             </div>
             <div class="form-group">
                 <label for="email">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Ingresa tu email">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu email" required>
             </div>
             <div class="form-group">
                 <label for="mensaje">Mensaje</label>
-                <textarea class="form-control" id="mensaje" rows="3" placeholder="Escribe tu mensaje aquí"></textarea>
+                <textarea class="form-control" id="mensaje" name="mensaje" rows="3" placeholder="Escribe tu mensaje aquí" required></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
@@ -68,5 +69,9 @@
             </section>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
