--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be You Cosméticos</title>
+    <meta name="description" content="Conoce las marcas de tintes que ofrecemos en Be You Cosméticos.">
+    <meta name="keywords" content="tintes, Be You, marcas, cosméticos">
+    <title>Marcas - Be You Cosméticos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body id="body">
-    <!-- Encabezado -->
     <header class="bg-light text-center py-3">
         <h1>Comercializadora Be You Cosméticos</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#inicio">Be You Cosméticos</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#inicio">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
                 </ul>
             </div>
         </nav>
@@ -30,20 +34,17 @@
 
     <main id="main" class="container mt-5">
         <section id="inicio">
-            <p>Be You es una distribuidora dedicada a empoderar a cada persona para descubrir y resaltar su belleza única a través de productos capilares de alta calidad. Inspirada en la autenticidad y la autoexpresión, Be You ofrece una amplia gama de tintes de cabello que permiten a cada cliente expresar su estilo propio, adaptándose a las distintas etapas y cambios de su vida.
-
-            A medida que la distribuidora sigue creciendo y expandiendo su catálogo, Be You busca consolidarse como el referente de confianza para quienes buscan calidad, autenticidad y una experiencia de belleza que va más allá de la estética, siendo una herramienta para la autoexpresión.
-            </p>
+            <h2>Marcas con las que trabajamos</h2>
+            <p>En Be You Cosméticos nos enorgullece ofrecer una selección de las mejores marcas de tintes para el cabello, garantizando calidad y variedad para nuestros clientes.</p>
         </section>
 
-        <section id="vision" class="mt-4">
-            <h2>Marcas con las que trabajamos</h2>
+        <section id="marcas" class="mt-4">
             <div class="row">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center mb-4">
                     <img src="images/exitenn-marcas.png" alt="Exitenn" class="img-fluid">
                     <h5>Exitenn</h5>
                 </div>
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center mb-4">
                     <img src="images/eurocolor-marcas.png" alt="Eurocolor" class="img-fluid">
                     <h5>Eurocolor</h5>
                 </div>
