Todos los archivos0201 1447

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Be You Cosméticos</title>
+    <title>Be You Cosméticos - Inicio</title>
+    <meta name="description" content="Be You Cosméticos ofrece productos capilares de alta calidad para resaltar tu belleza única. Descubre nuestra gama de tintes y accesorios.">
+    <meta name="keywords" content="tintes, cosméticos, belleza, productos capilares, Be You">
+    <meta name="author" content="Be You Cosméticos">
+    <link rel="canonical" href="https://www.tusitio.com" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
