--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,16 +37,15 @@
             <h3>Tintes para el cabello</h3>
             <div class="row">
                 <div class="col-md-6 text-center mb-4">
-                    <div class="card">
+                    <div class="card fade-in">
                         <img src="images/tintes-productos.png" alt="Exitenn" class="card-img-top img-fluid">
                         <div class="card-body">
-                            <h5 class="card-title">Exitenn</h5>
-                            <p class="card-text">Amplia variedad de colores</p>
+                          <h5 class="card-title">Exitenn</h5>
+                          <p class="card-text">Amplia variedad de colores</p>
                         </div>
-                    </div>
-                </div>
+                      </div>
                 <div class="col-md-6 text-center mb-4">
-                    <div class="card">
+                    <div class="card fade-in">
                         <img src="images/agua-oxi-productos.png" alt="Agua Oxigenada" class="card-img-top img-fluid">
                         <div class="card-body">
                             <h5 class="card-title">Agua Oxigenada</h5>
