--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacta a Be You Cosméticos</title>
-    <meta name="description" content="Contáctanos para conocer más sobre nuestros servicios de distribución de tintes.">
-    <meta name="keywords" content="tintes, cosméticos, contacto, Be You">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Contáctanos en Be You Cosméticos. Estamos aquí para ayudarte con tus necesidades de belleza capilar.">
+    <meta name="keywords" content="Be You, contacto, cosméticos, tintes, cabello">
+    <meta name="author" content="Be You Cosméticos">
+    <title>Be You Cosméticos - Contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body id="body">
-    <header class="bg-light text-center py-3">
-        <h1>Comercializadora Be You Cosméticos</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#inicio">Be You Cosméticos</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
-                </ul>
+<body>
+    <header class="fade-in">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Be You Cosméticos</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>   
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
 
-    <main id="main" class="container mt-4">
+    <main id="main" class="container mt-4 slide-in">
         <h2>Contáctanos</h2>
-        <form class="mb-5" action="enviar_mensaje.php" method="POST">
+        <form class="mb-5 fade-in" action="enviar_mensaje.php" method="POST">
             <div class="form-group">
                 <label for="nombre">Nombre</label>
                 <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
@@ -47,7 +49,7 @@
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
     </main>
-
+    
     <footer id="footer" class="bg-dark text-white py-4">
         <div class="container text-center">
             <section class="footerNav mb-3">
@@ -60,18 +62,16 @@
                 <p>&copy; 2024 Be You Cosméticos. Todos los derechos reservados.</p>
                 <div class="redes">
                     <a href="https://wa.me/numeroquepondréluego" target="_blank">
-                        <img src="icons/whatsapp.png" alt="WhatsApp" width="30">
+                        <img src="../icons/whatsapp.png" alt="WhatsApp" width="30">
                     </a>
                     <a href="https://www.instagram.com/beyou_ven/" target="_blank">
-                        <img src="icons/instagram.png" alt="Instagram" width="30">
+                        <img src="../icons/instagram.png" alt="Instagram" width="30">
                     </a>
                 </div>
             </section>
         </div>
     </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
+    </html>    
