--- a/pages/marcas.html
+++ b/pages/marcas.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Conoce las marcas de tintes que ofrecemos en Be You Cosméticos.">
-    <meta name="keywords" content="tintes, Be You, marcas, cosméticos">
-    <title>Marcas - Be You Cosméticos</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Descubre las marcas con las que trabajamos en Be You Cosméticos. Productos de alta calidad para el cuidado capilar.">
+    <meta name="keywords" content="Be You, marcas, cosméticos, tintes, cabello">
+    <meta name="author" content="Be You Cosméticos">
+    <title>Be You Cosméticos - Marcas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-<body id="body">
-    <header class="bg-light text-center py-3">
-        <h1>Comercializadora Be You Cosméticos</h1>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#inicio">Be You Cosméticos</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>                    
-                </ul>
+<body>
+    <header class="fade-in">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Be You Cosméticos</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="acerca-de.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="marcas.html">Marcas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contáctanos</a></li>  
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
 
-    <main id="main" class="container mt-5">
+    <main id="main" class="container mt-5 slide-in">
         <section id="inicio">
             <h2>Marcas con las que trabajamos</h2>
             <p>En Be You Cosméticos nos enorgullece ofrecer una selección de las mejores marcas de tintes para el cabello, garantizando calidad y variedad para nuestros clientes.</p>
         </section>
-
-        <section id="marcas" class="mt-4">
+    
+        <section id="marcas" class="mt-4 fade-in">
             <div class="row">
                 <div class="col-md-6 text-center mb-4">
-                    <img src="images/exitenn-marcas.png" alt="Exitenn" class="img-fluid">
+                    <img src="../images/exitenn-marcas.png" alt="Exitenn" class="img-fluid">
                     <h5>Exitenn</h5>
                 </div>
                 <div class="col-md-6 text-center mb-4">
-                    <img src="images/eurocolor-marcas.png" alt="Eurocolor" class="img-fluid">
+                    <img src="../images/eurocolor-marcas.png" alt="Eurocolor" class="img-fluid">
                     <h5>Eurocolor</h5>
                 </div>
             </div>
         </section>
     </main>
-
+    
     <footer id="footer" class="bg-dark text-white py-4">
         <div class="container text-center">
             <section class="footerNav mb-3">
@@ -64,18 +63,16 @@
                 <p>&copy; 2024 Be You Cosméticos. Todos los derechos reservados.</p>
                 <div class="redes">
                     <a href="https://wa.me/numeroquepondréluego" target="_blank">
-                        <img src="icons/whatsapp.png" alt="WhatsApp" width="30">
+                        <img src="../icons/whatsapp.png" alt="WhatsApp" width="30">
                     </a>
                     <a href="https://www.instagram.com/beyou_ven/" target="_blank">
-                        <img src="icons/instagram.png" alt="Instagram" width="30">
+                        <img src="../icons/instagram.png" alt="Instagram" width="30">
                     </a>
                 </div>
             </section>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
