--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>Te ayudamos a resaltar tu belleza única a través de productos capilares de alta calidad</h1>
             <img src="images/image-home.jpg" alt="Productos capilares" class="imagen-principal">
             <p>Conectamos a los mejores proveedores de tintes con nuestros clientes. Calidad garantizada.</p>
-            <a href="contacto.html" class="btn btn-primary">Contáctanos</a>
+            <a href="pages/contacto.html" class="btn btn-primary">Contáctanos</a>
         </div>
 
         <section id="como-trabajamos" class="container mt-5">
